app/native/platform/include/archoera_platform.h

/* ── 生命周期 ───────────────────────────────────────────────────── */
APL_API int32_t apl_abi_version(void);   /* 契约版本 */
APL_API int32_t apl_init(void);          /* 进程级一次；重复调用幂等 */
APL_API int32_t apl_shutdown(void);      /* join 线程、释放抑制、注销媒体会话；幂等 */
APL_API uint32_t apl_capabilities(void); /* 能力位图；未 init 亦可查询 */
typedef struct AplTrackMeta {
    AplString title;       /* 必填 */
    AplString artist;      /* 多人由 Dart 预拼接 " / " */
    AplString album;
    int64_t duration_ms;   /* <0 = 未知 */
    AplString art_url;     /* http(s) URL 或本地绝对路径；NULL = 无封面 */
    AplString art_bytes;   /* 本地封面字节（Dart 读文件后传入）；Windows 走内存流，其余忽略 */
} AplTrackMeta;
/* ── SystemPower ───────────────────────────────────────────────── */
APL_API int32_t apl_power_set_sleep_inhibit(int32_t on);
APL_API int32_t apl_power_set_screen_events(int32_t on);
/* ── SystemWindow ──────────────────────────────────────────────── */
APL_API int32_t apl_window_set_events(int32_t on);
/* ── SystemMedia ───────────────────────────────────────────────── */
APL_API int32_t apl_media_set_track(const AplTrackMeta *track); /* NULL = 清除 */
APL_API int32_t apl_media_set_playback(int32_t state,   /* 0=stopped 1=playing 2=paused */
                                       int64_t position_ms,
                                       double speed, double volume,
                                       int32_t loop,    /* 0=list 1=one */
                                       int32_t shuffle);
APL_API int32_t apl_media_set_window(int64_t window);   /* HWND/NSWindow*；非桌面忽略 */
/* 单实例：1=首实例；0=已有实例（调用方应退出）；<0=错误。进程内幂等。 */
APL_API int32_t apl_instance_acquire(void);
/* ── ArchoeraOS 会话（archoera_shell_v1）─────────────────────────── */
/* 仅当运行在 archoera-shell kiosk 会话下（Wayland socket 暴露该全局）时可用；
 * 未接入时以下请求返回 APL_ERR_UNSUPPORTED，事件流为空。 */

/* 订阅/退订会话事件（APL_EVENT_OS_* / 媒体键命令）。
 * 订阅成功时合成器会立即下发当前会话状态（能力位/亮度/音量/电池/会话/屏幕）。 */
APL_API int32_t apl_os_set_events(int32_t on);
/* 请求（越界百分比由合成器夹取；无对应能力位时被静默忽略）。 */
APL_API int32_t apl_os_set_brightness(int32_t percent);
APL_API int32_t apl_os_set_volume(int32_t percent);
APL_API int32_t apl_os_set_screen_enabled(int32_t on);
APL_API int32_t apl_os_power_off(void);
APL_API int32_t apl_os_reboot(void);
APL_API int32_t apl_os_suspend(void);
APL_API int32_t apl_os_hibernate(void);
/* 显示设置（仅 archoera-shell udev 后端提供 output 能力位时生效）。
 * 合成器会夹取缩放（100%-400%）并忽略连接器不支持的尺寸/变换。 */
APL_API int32_t apl_os_set_output_scale(int32_t scale_milli); /* 千分数，如 1500=150% */
APL_API int32_t apl_os_set_output_mode(int32_t width, int32_t height); /* 0,0 = 首选模式 */
APL_API int32_t apl_os_set_output_transform(int32_t transform); /* 0..7，见 wl_output.transform */
/* 系统提示（UTF-8 title/body；用于“已有实例”提示等）。失败返回负值。 */
APL_API int32_t apl_notify(const char *title, const char *body);
/* 一次性读取系统主题色（0=成功并写 r/g/b，0-255；<0=不可得）。
 * 注：应用层不应主动轮询/查询系统色；正常路径是 apl_system_accent_set_events
 * 订阅后由平台**推送**（订阅时立即推当前值，之后推变化）。本函数仅作备用。 */
APL_API int32_t apl_system_accent(int32_t *r, int32_t *g, int32_t *b);
/* 订阅系统主题色：平台**推送**（OS → Dart）——
 *   - 订阅成功时立即推送一次当前色；
 *   - 之后系统色变化时推送。
 * 事件 APL_EVENT_SYSTEM_ACCENT 携带 u.accent（r/g/b，0-255），Dart 无需再查询。 */
APL_API int32_t apl_system_accent_set_events(int32_t on);
/* 订阅系统深浅色：平台**推送**（OS → Dart）——
 *   - 订阅成功时立即推送一次当前值；
 *   - 之后系统深浅色变化时推送。
 * 事件 APL_EVENT_SYSTEM_THEME 携带 u.theme.dark（1=深色，0=浅色）。 */
APL_API int32_t apl_system_theme_set_events(int32_t on);
/* 事件回调：可在任意 OS 线程触发；Dart 侧须用 NativeCallable.listener。
 * event 仅在回调期间有效（栈上），user_data 由 Dart 提供原样回传。
 * cb = NULL 注销（线程安全，置位后生效）。 */
typedef void (*AplEventCallback)(const AplEvent *event, void *user_data);
APL_API int32_t apl_set_event_callback(AplEventCallback cb, void *user_data);