app/lib/services/platform/platform_bindings.dart


/// libarchoera_platform 绑定（进程级单例，[tryLoad] 失败返回 null → Noop）。
class PlatformBindings {
  PlatformBindings._(DynamicLibrary lib)
    : _version = lib.lookupFunction<_AplVersionC, _AplVersionD>(
        'apl_abi_version',
      ),
      _init = lib.lookupFunction<_AplInitC, _AplInitD>('apl_init'),
      _shutdown = lib.lookupFunction<_AplShutdownC, _AplShutdownD>(
        'apl_shutdown',
      ),
      _caps = lib.lookupFunction<_AplCapsC, _AplCapsD>('apl_capabilities'),
      _powerInhibit = lib.lookupFunction<_AplPowerInhibitC, _AplPowerInhibitD>(
        'apl_power_set_sleep_inhibit',
      ),
      _powerScreen = lib.lookupFunction<_AplPowerScreenC, _AplPowerScreenD>(
        'apl_power_set_screen_events',
      ),
      _windowEvents = lib.lookupFunction<_AplWindowEventsC, _AplWindowEventsD>(
        'apl_window_set_events',
      ),
      _instanceAcquire = lib
          .lookupFunction<_AplInstanceAcquireC, _AplInstanceAcquireD>(
            'apl_instance_acquire',
          ),
      _notify = lib.lookupFunction<_AplNotifyC, _AplNotifyD>('apl_notify'),
      _systemAccent = lib.lookupFunction<_AplSystemAccentC, _AplSystemAccentD>(
        'apl_system_accent',
      ),
      _systemAccentSetEvents = lib
          .lookupFunction<
            _AplSystemAccentSetEventsC,
            _AplSystemAccentSetEventsD
          >('apl_system_accent_set_events'),
      _systemThemeSetEvents = lib
          .lookupFunction<_AplSystemThemeSetEventsC, _AplSystemThemeSetEventsD>(
            'apl_system_theme_set_events',
          ),
      _mediaTrack = lib.lookupFunction<_AplMediaTrackC, _AplMediaTrackD>(
        'apl_media_set_track',
      ),
      _mediaPlayback = lib
          .lookupFunction<_AplMediaPlaybackC, _AplMediaPlaybackD>(
            'apl_media_set_playback',
          ),
      _mediaWindow = lib.lookupFunction<_AplMediaWindowC, _AplMediaWindowD>(
        'apl_media_set_window',
      ),
      // ArchoeraOS 会话符号：可选（旧版桥接缺失时应整体降级为 Noop，而非拖垮桥接）
      _osSetEvents = _try(
        () => lib.lookupFunction<_AplOsSetEventsC, _AplOsSetEventsD>(
          'apl_os_set_events',
        ),
      ),
      _osSetBrightness = _try(
        () => lib.lookupFunction<_AplOsSetPercentC, _AplOsSetPercentD>(
          'apl_os_set_brightness',
        ),
      ),
      _osSetVolume = _try(
        () => lib.lookupFunction<_AplOsSetPercentC, _AplOsSetPercentD>(
          'apl_os_set_volume',
        ),
      ),
      _osSetScreen = _try(
        () => lib.lookupFunction<_AplOsSetScreenC, _AplOsSetScreenD>(
          'apl_os_set_screen_enabled',
        ),
      ),
      _osPowerOff = _try(
        () => lib.lookupFunction<_AplOsVoidC, _AplOsVoidD>('apl_os_power_off'),
      ),
      _osReboot = _try(
        () => lib.lookupFunction<_AplOsVoidC, _AplOsVoidD>('apl_os_reboot'),
      ),
      _osSuspend = _try(
        () => lib.lookupFunction<_AplOsVoidC, _AplOsVoidD>('apl_os_suspend'),
      ),
      _osHibernate = _try(
        () => lib.lookupFunction<_AplOsVoidC, _AplOsVoidD>('apl_os_hibernate'),
      ),
      _osSetOutputScale = _try(
        () => lib.lookupFunction<_AplOsSetPercentC, _AplOsSetPercentD>(
          'apl_os_set_output_scale',
        ),
      ),
      _osSetOutputMode = _try(
        () => lib.lookupFunction<_AplOsSetModeC, _AplOsSetModeD>(
          'apl_os_set_output_mode',
        ),
      ),
      _osSetOutputTransform = _try(
        () => lib.lookupFunction<_AplOsSetPercentC, _AplOsSetPercentD>(
          'apl_os_set_output_transform',
        ),
      ),
      _setCallback = lib.lookupFunction<_SetEventCallbackC, _SetEventCallbackD>(
        'apl_set_event_callback',
      ) {
    // 事件回调：listener 可从任意 OS 线程触发，事件按到达序进入 Dart 端口
    _eventCallable = NativeCallable<AplEventCallbackC>.listener(_onNativeEvent);
    _setCallback(_eventCallable.nativeFunction, nullptr);
  }

  /// 查询可选符号，缺失（旧版桥接）返回 null 以优雅降级。
  static T? _try<T>(T Function() lookup) {
    try {
      return lookup();
    } catch (_) {
      return null;
    }
  }

  static PlatformBindings? _instance;

  late final NativeCallable<AplEventCallbackC> _eventCallable;

  bool _disposed = false;

  final _AplVersionD _version;
  final _AplInitD _init;
  final _AplShutdownD _shutdown;
  final _AplCapsD _caps;
  final _AplPowerInhibitD _powerInhibit;
  final _AplPowerScreenD _powerScreen;
  final _AplWindowEventsD _windowEvents;
  final _AplInstanceAcquireD _instanceAcquire;
  final _AplNotifyD _notify;
  final _AplSystemAccentD _systemAccent;
  final _AplSystemAccentSetEventsD _systemAccentSetEvents;
  final _AplSystemThemeSetEventsD _systemThemeSetEvents;
  final _AplMediaTrackD _mediaTrack;
  final _AplMediaPlaybackD _mediaPlayback;
  final _AplMediaWindowD _mediaWindow;
  final _SetEventCallbackD _setCallback;
  final _AplOsSetEventsD? _osSetEvents;
  final _AplOsSetPercentD? _osSetBrightness;
  final _AplOsSetPercentD? _osSetVolume;
  final _AplOsSetScreenD? _osSetScreen;
  final _AplOsVoidD? _osPowerOff;
  final _AplOsVoidD? _osReboot;
  final _AplOsVoidD? _osSuspend;
  final _AplOsVoidD? _osHibernate;
  final _AplOsSetPercentD? _osSetOutputScale;
  final _AplOsSetModeD? _osSetOutputMode;
  final _AplOsSetPercentD? _osSetOutputTransform;

  // 四类事件广播流（ffi_* 实现订阅转译）
  final _commandCtrl = StreamController<MediaCommandEvent>.broadcast();
  final _seekCtrl = StreamController<AplSeekEvent>.broadcast();
  final _screenCtrl = StreamController<AplScreenEvent>.broadcast();
  final _windowCtrl = StreamController<AplWindowEvent>.broadcast();
  final _backendCtrl = StreamController<AplBackendEvent>.broadcast();
  final _accentCtrl = StreamController<AplAccentEvent>.broadcast();
  final _themeCtrl = StreamController<AplThemeEvent>.broadcast();
  final _osCapsCtrl = StreamController<AplOsCapabilitiesEvent>.broadcast();
  final _osBrightnessCtrl = StreamController<AplOsBrightnessEvent>.broadcast();
  final _osVolumeCtrl = StreamController<AplOsVolumeEvent>.broadcast();
  final _osBatteryCtrl = StreamController<AplOsBatteryEvent>.broadcast();
  final _osSessionCtrl = StreamController<AplOsSessionEvent>.broadcast();
  final _osScreenCtrl = StreamController<AplOsScreenEvent>.broadcast();
  final _osPowerKeyCtrl = StreamController<AplOsPowerKeyEvent>.broadcast();
  final _osOutputCtrl = StreamController<AplOsOutputEvent>.broadcast();

  /// ArchoeraOS 会话函数是否可用（桥接提供且非旧版）。
  bool get osSessionSymbolsAvailable => _osSetEvents != null;

  // ── ArchoeraOS 会话正向调用（符号缺失返回 UNSUPPORTED）──
  int osSetEvents(bool on) =>
      _osSetEvents?.call(on ? 1 : 0) ?? aplErrUnsupported;
  int osSetBrightness(int percent) =>
      _osSetBrightness?.call(percent) ?? aplErrUnsupported;
  int osSetVolume(int percent) =>
      _osSetVolume?.call(percent) ?? aplErrUnsupported;
  int osSetScreenEnabled(bool on) =>
      _osSetScreen?.call(on ? 1 : 0) ?? aplErrUnsupported;
  int osPowerOff() => _osPowerOff?.call() ?? aplErrUnsupported;
  int osReboot() => _osReboot?.call() ?? aplErrUnsupported;
  int osSuspend() => _osSuspend?.call() ?? aplErrUnsupported;
  int osHibernate() => _osHibernate?.call() ?? aplErrUnsupported;
  int osSetOutputScale(int scaleMilli) =>
      _osSetOutputScale?.call(scaleMilli) ?? aplErrUnsupported;
  int osSetOutputMode(int width, int height) =>
      _osSetOutputMode?.call(width, height) ?? aplErrUnsupported;
  int osSetOutputTransform(int transform) =>
      _osSetOutputTransform?.call(transform) ?? aplErrUnsupported;

  /// 单实例仲裁：1=首实例；0=已有实例；<0=错误。
  int acquireInstance() => _instanceAcquire();

  /// 订阅系统主题色变更事件（变更时 accentEvents 推事件）。
  int setAccentEvents(bool on) => _systemAccentSetEvents(on ? 1 : 0);

  /// 订阅系统深浅色（订阅即收当前值，之后收变化）。
  int setThemeEvents(bool on) => _systemThemeSetEvents(on ? 1 : 0);

  /// 系统主题色（DE accent）；不可得返回 null。
  Color? systemAccent() {
    final r = calloc<Int32>();
    final g = calloc<Int32>();
    final b = calloc<Int32>();
    try {
      if (_systemAccent(r, g, b) != aplOk) return null;
      return Color.fromARGB(255, r.value, g.value, b.value);
    } finally {
      calloc.free(r);
      calloc.free(g);
      calloc.free(b);
    }
  }

  /// 系统提示（UTF-8）。用于“已有实例”等无 UI 框架场景。
  int notify(String title, String body) {
    final t = title.toNativeUtf8();
    final b = body.toNativeUtf8();
    try {
      return _notify(t, b);
    } finally {
      malloc.free(t);
      malloc.free(b);
    }
  }

  /// 尝试加载并 init；任何一步失败返回 null（Dart 侧走 Noop）。
  static PlatformBindings? tryLoad() {
    if (_instance != null) return _instance;
    final path = NativeLibPaths.resolve(NativeModule.platformBridge);
    if (path == null) return null;
    try {
      final lib = DynamicLibrary.open(path);
      final b = PlatformBindings._(lib);
      if (b._version() != aplAbiVersion) return null; // 契约版本不符 → Noop
      if (b._init() != aplOk) return null;
      _instance = b;
      return b;
    } catch (_) {
      return null;
    }
  }

  // ── 事件流 ──

  Stream<MediaCommandEvent> get commandEvents => _commandCtrl.stream;
  Stream<AplSeekEvent> get seekEvents => _seekCtrl.stream;
  Stream<AplScreenEvent> get screenEvents => _screenCtrl.stream;
  Stream<AplWindowEvent> get windowEvents => _windowCtrl.stream;
  Stream<AplBackendEvent> get backendEvents => _backendCtrl.stream;
  Stream<AplAccentEvent> get accentEvents => _accentCtrl.stream;
  Stream<AplThemeEvent> get themeEvents => _themeCtrl.stream;
  Stream<AplOsCapabilitiesEvent> get osCapabilitiesEvents => _osCapsCtrl.stream;
  Stream<AplOsBrightnessEvent> get osBrightnessEvents =>
      _osBrightnessCtrl.stream;
  Stream<AplOsVolumeEvent> get osVolumeEvents => _osVolumeCtrl.stream;
  Stream<AplOsBatteryEvent> get osBatteryEvents => _osBatteryCtrl.stream;
  Stream<AplOsSessionEvent> get osSessionEvents => _osSessionCtrl.stream;
  Stream<AplOsScreenEvent> get osScreenEvents => _osScreenCtrl.stream;
  Stream<AplOsPowerKeyEvent> get osPowerKeyEvents => _osPowerKeyCtrl.stream;
  Stream<AplOsOutputEvent> get osOutputEvents => _osOutputCtrl.stream;
